<resources>
    <string name="app_name">Bier Lijst</string>
    <string name="action_settings">Instellingen</string>
    <string name="add_beer_activity_label">Toevoegen</string>
    <string name="details_beer_activity_label">Details</string>
    <string name="modify_beer_activity_label">Modify</string>

    <string name="beer_name_label" translatable="true">Naam:</string>
    <string name="beer_name_hint" translatable="false">e.g. Westmalle Tripel</string>
    <string name="alcohol_percentage_label" translatable="true">Percentage:</string>
    <string name="alcohol_percentage_hint" translatable="false">e.g. 9.0</string>
    <string name="beer_rating_label" translatable="true">Score:</string>
    <string name="beer_image_label" translatable="true">Foto:</string>
    <string name="button_gallery" translatable="true">Kies uit gallerij</string>
    <string name="button_camera" translatable="true">Neem foto</string>
    <string name="button_confirm" translatable="true">Bevestigen</string>
    <string name="button_modify" translatable="true">Wijzigen</string>

    <!-- strings for the menu items in the details beer screen-->
    <string name="menu_item_delete" translatable="true">Verwijderen</string>
    <string name="menu_item_modify" translatable="true">Wijzigen</string>

    <string name="recycler_view_empty_state" translatable="true">Je hebt nog geen bieren toegevoegd.
        Klik onderaan de pagina op de knop om je eerste bier toe te voegen</string>

    <!-- strings for the dialog on the details beer screen -->
    <string name="dialog_delete_title" translatable="true">Verwijderen</string>
    <string name="dialog_delete_content" translatable="true">Ben je zeker dat je dit bier wilt verwijderen?</string>
    <string name="dialog_delete_confirm_button" translatable="true">Ja</string>
    <string name="dialog_delete_ignore_button" translatable="true">Nee</string>

    <!-- setting for ordering of the data -->
    <string name="pref_label_order" translatable="true">Sorteer volgens</string>
    <string name="pref_key_order" translatable="false">key_order</string>
    <string name="pref_order_by_name_label" translatable="true">Naam</string>
    <string name="pref_order_by_name_value" translatable="false">Name</string>
    <string name="pref_order_by_percentage_label" translatable="true">Alcohol percentage</string>
    <string name="pref_order_by_percentage_value" translatable="true">Alcohol_percentage</string>

    <!-- text in the snackbar after adding a beer -->
    <string name="snackbar_add_beer_successful" translatable="true">Bier toegevoegd!</string>
    <string name="snackbar_delete_beer_successful" translatable="true">Bier verwijderd!</string>
    <string name="snackbar_modify_beer_successful" translatable="true">Bier gewijzigd!</string>
    <string name="snackbar_ok_button" translatable="true">ok</string>


    <!-- flags used to indicate which action is performed -->
    <string name="flag_delete_beer" translatable="true">deleteBeerFlag</string>



</resources>
