<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/beerNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/beer_name_label"
            android:textColor="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/beerNameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/beer_name_hint"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            android:inputType="textCapWords"/>

        <TextView
            android:id="@+id/beerPercentageLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/alcohol_percentage_label"
            android:textColor="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/beerPercentageValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/alcohol_percentage_hint"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/beerRatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/beer_rating_label"
            android:textColor="@android:color/darker_gray"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:numStars="5"
            android:stepSize="0.5"/>

        <TextView
            android:id="@+id/beerImageLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/beer_image_label"
            android:textColor="@android:color/darker_gray"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:id="@+id/beerImage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/galleryButton"
                android:text="@string/button_gallery"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/cameraButton"
                android:text="@string/button_camera"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:id="@+id/addBeerConfirmButton"/>

    </LinearLayout>
</ScrollView>